crates/ssa-workflow-derive/tests/ui/enum.stderr
error: CanonicalEncode can only be derived for structs
 --> tests/ui/enum.rs:4:1
  |
4 | enum BadEnum {
  | ^^^^
