crates/ssa-workflow-derive/tests/ui/enum.rs
use ssa_workflow_derive::CanonicalEncode;

#[derive(CanonicalEncode)]
enum BadEnum {
    A,
}

fn main() {}
